--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,15 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs '.'
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation (name:'wormhole', ext:'aar')
     implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
